[package]
name = "bigquery-functions-types-macros"
version = "0.1.9"
edition = "2021"
authors = ["Shota Kizawa <shomok0106k@gmail.com>"]
description = "proc macros to define BigQuery function types"
license = "MIT"
repository = "https://github.com/kiibo382/bigquery-functions/"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
