[package]
name = "bigquery-functions"
version = "0.1.3"
edition = "2021"
authors = ["Shota Kizawa <shomok0106k@gmail.com>"]
description = "BigQuery functions"
license = "MIT"
repository = "https://github.com/kiibo382/bigquery-functions/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
scraper = "0.13.0"
ego-tree = "0.6.2"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
similar = { version = "2.1.0", features = ["inline"] }
bigquery-functions-types-macros = { version="0.1.3", path = "../bigquery-functions-types-macros" }
